--- a/lobo-shell.tmpl
+++ b/lobo-shell.tmpl
@@ -47,7 +47,7 @@ FirstName LastName <email@domain.example>
 >> What new pipes need to be created to set up P[i]'s pipeline? 
 
 >> A3: Copy here the prototypes for any functions you have introduced.
->> Indentify the purpose of each in 50 words or less.
+>> Identify the purpose of each in 50 words or less.
 
 >> A4: Briefly describe how the functions (from A3) are called
 >> when your shell is processing the user-entered commands:
