Ready for final submision: 1-5c

--- a/lobo-shell.tmpl
+++ b/lobo-shell.tmpl
@@ -78,7 +78,7 @@ void exec(struct executeData *parseCmd,int numOfCmds);
 void execPipe(struct executeData *parseCmd,int numOfCmds);
 
 //executes multiple pipe commands
-void execPipe2(struct executeData *parseCmd,int numOfCmds);
+void execMultiblePipes(struct executeData *parseCmd,int numOfCmds);
 
 //remove quotes from command input
 void removeQuotes(char * line);
